# starry-next

./: .gitignore  Cargo.toml  Makefile  run_la.sh  run_rv.sh  testcases.txt
.github/workflows/: adapt.yml  ci.yml  oscomp.yml
api/src/: signal.rs
api/src/file/: mod.rs
api/src/imp/: futex.rs  signal.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  io.rs  poll.rs  stat.rs
api/src/imp/fs/io/: poll.rs
api/src/imp/task/: clone.rs  exit.rs  mod.rs  resources.rs  thread.rs
apps/oscomp/: testcase_list
configs/: dummy.toml
core/: Cargo.toml
core/src/: futex.rs  lib.rs  mm.rs  resources.rs  task.rs
scripts/: config.toml.temp
src/: entry.rs  main.rs  mm.rs  syscall.rs  task.rs
src/syscall_imp/: mod.rs  signal.rs
src/syscall_imp/fs/: ctl.rs  fd_ops.rs  stat.rs
src/syscall_imp/mm/: brk.rs
src/syscall_imp/task/: thread.rs
src/syscall_imp/utils/: mod.rs  system_info.rs  user.rs
