[package]
name = "starry"
version = "0.1.0"
edition = "2024"
authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[dependencies]
cfg-if = "1.0.0"
log = "0.4"
linkme = "0.3"
axerrno = "0.1"
memory_addr = "0.3"
xmas-elf = "0.9"
spin = "0.9"
crate_interface = "0.1"
bitflags = "2.6"

kernel-elf-parser = "0.3"
num_enum = { version = "0.7", default-features = false }
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }
numeric-enum-macro = "0.2.0"

axconfig = { git = "https://github.com/AsakuraMizu/arceos.git" }
axfs = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "lwext4_rs",
] }
axstd = { git = "https://github.com/AsakuraMizu/arceos.git" }
axhal = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "uspace",
] }
axmm = { git = "https://github.com/AsakuraMizu/arceos.git" }
axtask = { git = "https://github.com/AsakuraMizu/arceos.git" }
axsync = { git = "https://github.com/AsakuraMizu/arceos.git" }
arceos_posix_api = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "uspace",
    "smp",
    "irq",
    "fs",
    "fd",
    "multitask",
    "net",
    "pipe",
    "select",
    "epoll",
] }
axns = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "thread-local",
] }

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/yfblock/page_table_multiarch.git", rev = "c8a13b0" }
page_table_entry = { git = "https://github.com/yfblock/page_table_multiarch.git", rev = "c8a13b0" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[package.metadata.vendor-filter]
platforms = [
    "x86_64-unknown-linux-gnu",
    "riscv64gc-unknown-none-elf",
    "loongarch64-unknown-none",
]
