[package]
name = "starry"
version = "0.1.0"
edition = "2024"
authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[dependencies]
log = "0.4"
linkme = "0.3"
axerrno = "0.1"
memory_addr = "0.3"
xmas-elf = "0.9"
spin = "0.9"
crate_interface = "0.1"
bitflags = "2.6"
percpu = "0.2.0"

kernel-elf-parser = "0.3"
num_enum = { version = "0.7", default-features = false }
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }
numeric-enum-macro = "0.2.0"
static_assertions = "1.1.0"
macro_rules_attribute = "0.2.0"

axconfig = { git = "https://github.com/AsakuraMizu/arceos.git" }
axfs = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "lwext4_rs",
] }
axhal = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "uspace",
    "fp_simd",
] }
axmm = { git = "https://github.com/AsakuraMizu/arceos.git" }
axns = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "thread-local",
] }
axsync = { git = "https://github.com/AsakuraMizu/arceos.git" }
axtask = { git = "https://github.com/AsakuraMizu/arceos.git" }
arceos_posix_api = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "uspace",
    "smp",
    "irq",
    "fs",
    "fd",
    "multitask",
    "net",
    "pipe",
    "select",
    "epoll",
] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"

[package.metadata.vendor-filter]
platforms = [
    "x86_64-unknown-linux-gnu",
    "riscv64gc-unknown-none-elf",
    "loongarch64-unknown-none",
]
