[workspace]
resolver = "2"
members = ["api", "core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
    "Azure-stars <Azure_stars@126.com>",
    "Yuekai Jia <equation618@gmail.com>",
]
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/starry-next"

[workspace.dependencies]
axfeat = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "multitask",
    "net",
    "fs",
    "lwext4_rs",
    "smp",
    "fp_simd",
] }

axconfig = { git = "https://github.com/AsakuraMizu/arceos.git" }
axfs = { git = "https://github.com/AsakuraMizu/arceos.git" }
axhal = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "uspace",
] }
axlog = { git = "https://github.com/AsakuraMizu/arceos.git" }
axmm = { git = "https://github.com/AsakuraMizu/arceos.git" }
axnet = { git = "https://github.com/AsakuraMizu/arceos.git" }
axns = { git = "https://github.com/AsakuraMizu/arceos.git", features = [
    "thread-local",
] }
axruntime = { git = "https://github.com/AsakuraMizu/arceos.git" }
axsync = { git = "https://github.com/AsakuraMizu/arceos.git" }
axtask = { git = "https://github.com/AsakuraMizu/arceos.git" }

axerrno = "0.1"
bitflags = "2.6"
linkme = "0.3"
memory_addr = "0.3"

starry-core = { path = "./core" }
starry-api = { path = "./api" }

[package]
name = "starry"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axhal.workspace = true
axlog.workspace = true
axruntime.workspace = true
axtask.workspace = true

axerrno.workspace = true
linkme.workspace = true

starry-core.workspace = true
starry-api.workspace = true

syscalls = { git = "https://github.com/jasonwhite/syscalls.git", rev = "92624de", default-features = false }

[package.metadata.vendor-filter]
platforms = [
    "x86_64-unknown-linux-gnu",
    "riscv64gc-unknown-none-elf",
    "loongarch64-unknown-none",
]
